@@ -23,6 +23,7 @@
  - xtext: Implemented scrolling instead of full redraws when not using
    a background image or transparency.
  - Reimplemented 'Move front tab left/right' keybinding.
+ - Provide default usermenu and buttons for translation.
  - 
  - 
  - 
